--- a/style/RV-Devanagari.css
+++ b/style/RV-Devanagari.css
@@ -1,6 +1,6 @@
 @font-face {
 Font-family: 'Devanagari';
-src: url('AdishilaVedic.ttf')}
+src: url('TiroDevanagariSanskrit-Regular.ttf')}
 .Devanagari {
 font-family: 'Devanagari' !important}
 table {
@@ -23,18 +23,18 @@ padding: 4px;
 margin: 2px;
 background-color: #ffcc99;
 font-size: 130%}
-.VargaColorType1 {
+.VargaStyle1 {
 font-family: 'Devanagari';
 background-color: #eeeeee;
 line-height: 90%;
 padding: 12px;
-font-size: 165%}
-.VargaColorType2 {
+font-size: 170%}
+.VargaStyle2 {
 font-family: 'Devanagari';
 background-color: #d1e0e0;
 line-height: 90%;
 padding: 12px;
-font-size: 165%}
+font-size: 170%}
 .RishiDevChandas {
 padding: 2px;
 margin: 1px;
@@ -47,5 +47,5 @@ margin: 1px;
 font-size: 50%;
 color: blue;
 margin: 1px}
-.red {color: red}
-.black {color: black}
+.style1 {color: Black}
+.style2 {color: MediumSlateBlue}
